<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_min_magnitude_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_magnitude_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_min_magnitude_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_max_magnitude_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_max_magnitude_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_max_magnitude_label" />


    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

        <!--<CheckBoxPreference-->
            <!--android:id="@+id/setting_title_show_id"-->
            <!--android:key="setting_title_show"-->
            <!--android:title="Show Main Title"-->
            <!--android:summary="Show/hide MainPage title" />-->

</PreferenceScreen>